fix: add transitions to buttons and navbar links for smooth dark mode

--- a/app/assets/scss/_dark-mode.scss
+++ b/app/assets/scss/_dark-mode.scss
@@ -76,6 +76,12 @@ html.dark {
                 background-color: $gray-900;
             }
         }
+
+        .projects-credits {
+            .title {
+                color: $light;
+            }
+        }
     }
 
     .stacks-section,
